--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/CSS" href="CSS/style.css">
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="1000px" height="500px"></canvas>
 
     <script src="JS/script.js"></script>
 </body>
